--- a/api/composer.json
+++ b/api/composer.json
@@ -9,6 +9,7 @@
         "laravel/lumen-framework": "^7.0"
     },
     "require-dev": {
+        "friendsofphp/php-cs-fixer": "^2.16",
         "fzaninotto/faker": "^1.9.1",
         "mockery/mockery": "^1.3.1",
         "phpunit/phpunit": "^8.5"
@@ -37,6 +38,9 @@
     "scripts": {
         "post-root-package-install": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
+        ],
+        "format": [
+            "vendor/bin/php-cs-fixer fix"
         ]
     }
 }
