Adding some simple tests

--- a/api/composer.json
+++ b/api/composer.json
@@ -41,6 +41,9 @@
         ],
         "format": [
             "vendor/bin/php-cs-fixer fix"
+        ],
+        "test": [
+            "vendor/bin/phpunit tests"
         ]
     }
 }
