Adding instructions at README.md and finalizing setup.

--- a/api/composer.json
+++ b/api/composer.json
@@ -36,7 +36,7 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "scripts": {
-        "post-root-package-install": [
+        "post-install-cmd": [
             "@php -r \"file_exists('.env') || copy('.env.example', '.env');\""
         ],
         "format": [
