--- a/api/.env.example
+++ b/api/.env.example
@@ -9,7 +9,7 @@ LOG_CHANNEL=stack
 LOG_SLACK_WEBHOOK_URL=
 
 DB_CONNECTION=sqlite
-DB_DATABASE=account.sqlite
+DB_DATABASE=${PWD}/account.sqlite
 
 CACHE_DRIVER=file
 QUEUE_CONNECTION=sync
