--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -8,7 +8,7 @@ services:
             - "../api:/var/www/html"
         ports:
             - "8000:8000"
-        command: /bin/sh -c "composer install && php -S 0.0.0.0:8000 -t public"
+        command: /bin/sh -c "composer install --no-dev && php artisan migrate:refresh && php -S 0.0.0.0:8000 -t public"
         networks:
             - simple_api_test
 networks:
